--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -50,8 +50,8 @@
   );
   --text-gradient-yellow: linear-gradient(
     to right, 
-    hsl(45, 100%, 72%), 
-    hsl(35, 100%, 68%)
+    hsl(118, 100%, 72%), 
+    hsl(175, 100%, 68%)
   );
 
   /* solid */
@@ -63,8 +63,8 @@
   --smoky-black: hsl(0, 0%, 7%);
   --white-1: hsl(0, 0%, 100%);
   --white-2: hsl(0, 0%, 98%);
-  --orange-yellow-crayola: hsl(45, 100%, 72%);
-  --vegas-gold: hsl(45, 54%, 58%);
+  --orange-yellow-crayola: hsl(160, 100%, 72%);
+  --vegas-gold: hsl(101, 54%, 58%);
   --light-gray: hsl(0, 0%, 84%);
   --light-gray-70: hsla(0, 0%, 84%, 0.7);
   --bittersweet-shimmer: hsl(0, 43%, 51%);
@@ -77,7 +77,7 @@
   --ff-poppins: 'Poppins', sans-serif;
 
   /* font-size */
-  --fs-1: 24px;
+  --fs-1: 24px;3
   --fs-2: 18px;
   --fs-3: 17px;
   --fs-4: 16px;
@@ -204,6 +204,13 @@ article {
   background: var(--eerie-black-1);
   border-radius: inherit;
   z-index: -1;
+}
+
+
+.Joel-img{
+  background: var(--bg-gradient-onyx);
+  border-radius: 20px;
+  width: 120px;
 }
 
 .icon-box ion-icon { --ionicon-stroke-width: 35px; }
@@ -1414,6 +1421,7 @@ textarea.form-input::-webkit-resizer { display: none; }
   .sidebar-info { gap: 25px; }
 
   .avatar-box { border-radius: 30px; }
+  .Joel-img { border-radius: 30px}
 
   .avatar-box img { width: 120px; }
 
